Add hardCoded locale list for localematch.json

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -61,7 +61,7 @@
         "Arab-DZ": "ar-Arab-DZ",
         "Arab-EG": "ar-Arab-EG",
         "Arab-EH": "ar-Arab-EH",
-        "Arab-GB": "ks-Arab-GB",
+        "Arab-GB": "ur-Arab-GB",
         "Arab-ID": "ms-Arab-ID",
         "Arab-IN": "ur-Arab-IN",
         "Arab-IQ": "ar-Arab-IQ",
@@ -152,7 +152,7 @@
         "CY": "el-Grek-CY",
         "CZ": "cs-Latn-CZ",
         "Cakm": "ccp-Cakm-BD",
-        "Cans": "cr-Cans-CA",
+        "Cans": "iu-Cans-CA",
         "Cari": "xcr-Cari-TR",
         "Cham": "cjm-Cham-VN",
         "Cher": "chr-Cher-US",
@@ -166,7 +166,7 @@
         "Cyrl-BA": "sr-Cyrl-BA",
         "Cyrl-BG": "bg-Cyrl-BG",
         "Cyrl-BY": "be-Cyrl-BY",
-        "Cyrl-GE": "os-Cyrl-GE",
+        "Cyrl-GE": "ab-Cyrl-GE",
         "Cyrl-GR": "mk-Cyrl-GR",
         "Cyrl-KG": "ky-Cyrl-KG",
         "Cyrl-KZ": "kk-Cyrl-KZ",
@@ -273,10 +273,9 @@
         "Hans": "zh-Hans-CN",
         "Hans-CN": "zh-Hans-CN",
         "Hant": "zh-Hant-TW",
+        "Hant-CA": "yue-Hant-CA",
         "Hant-MO": "zh-Hant-MO",
         "Hebr": "he-Hebr-IL",
-        "Hebr-CA": "yi-Hebr-CA",
-        "Hebr-GB": "yi-Hebr-GB",
         "Hebr-IL": "he-Hebr-IL",
         "Hebr-SE": "yi-Hebr-SE",
         "Hebr-UA": "yi-Hebr-UA",
@@ -321,6 +320,7 @@
         "KZ": "ru-Cyrl-KZ",
         "Kali": "eky-Kali-MM",
         "Kana": "ja-Kana-JP",
+        "Kawi": "kaw-Kawi-ID",
         "Khar": "pra-Khar-PK",
         "Khmr": "km-Khmr-KH",
         "Khmr-KH": "km-Khmr-KH",
@@ -628,6 +628,7 @@
         "NR": "na-Latn-NR",
         "NU": "en-Latn-NU",
         "NZ": "en-Latn-NZ",
+        "Nagm": "unr-Nagm-IN",
         "Nand": "sa-Nand-IN",
         "Narb": "xna-Narb-SA",
         "Nbat": "arc-Nbat-JO",
@@ -1289,6 +1290,9 @@
         "bkv": "bkv-Latn-ZZ",
         "bkv-Latn": "bkv-Latn-ZZ",
         "bkv-ZZ": "bkv-Latn-ZZ",
+        "bla": "bla-Latn-CA",
+        "bla-CA": "bla-Latn-CA",
+        "bla-Latn": "bla-Latn-CA",
         "blg": "blg-Latn-MY",
         "blg-Latn": "blg-Latn-MY",
         "blg-MY": "blg-Latn-MY",
@@ -1313,6 +1317,7 @@
         "bn": "bn-Beng-BD",
         "bn-BD": "bn-Beng-BD",
         "bn-Beng": "bn-Beng-BD",
+        "bn-IN": "bn-Beng-IN",
         "bng": "bng-Latn-ZZ",
         "bng-Latn": "bng-Latn-ZZ",
         "bng-ZZ": "bng-Latn-ZZ",
@@ -1536,6 +1541,9 @@
         "cla": "cla-Latn-ZZ",
         "cla-Latn": "cla-Latn-ZZ",
         "cla-ZZ": "cla-Latn-ZZ",
+        "clc": "clc-Latn-CA",
+        "clc-CA": "clc-Latn-CA",
+        "clc-Latn": "clc-Latn-CA",
         "cme": "cme-Latn-ZZ",
         "cme-Latn": "cme-Latn-ZZ",
         "cme-ZZ": "cme-Latn-ZZ",
@@ -1557,21 +1565,18 @@
         "cr": "cr-Cans-CA",
         "cr-CA": "cr-Cans-CA",
         "cr-Cans": "cr-Cans-CA",
+        "crg": "crg-Latn-CA",
+        "crg-CA": "crg-Latn-CA",
+        "crg-Latn": "crg-Latn-CA",
         "crh": "crh-Cyrl-UA",
         "crh-Cyrl": "crh-Cyrl-UA",
         "crh-UA": "crh-Cyrl-UA",
-        "crj": "crj-Cans-CA",
-        "crj-CA": "crj-Cans-CA",
-        "crj-Cans": "crj-Cans-CA",
         "crk": "crk-Cans-CA",
         "crk-CA": "crk-Cans-CA",
         "crk-Cans": "crk-Cans-CA",
         "crl": "crl-Cans-CA",
         "crl-CA": "crl-Cans-CA",
         "crl-Cans": "crl-Cans-CA",
-        "crm": "crm-Cans-CA",
-        "crm-CA": "crm-Cans-CA",
-        "crm-Cans": "crm-Cans-CA",
         "crs": "crs-Latn-SC",
         "crs-Latn": "crs-Latn-SC",
         "crs-SC": "crs-Latn-SC",
@@ -1828,6 +1833,7 @@
         "en-KE": "en-Latn-KE",
         "en-KI": "en-Latn-KI",
         "en-KN": "en-Latn-KN",
+        "en-KR": "en-Latn-KR",
         "en-KY": "en-Latn-KY",
         "en-LC": "en-Latn-LC",
         "en-LK": "en-Latn-LK",
@@ -2354,6 +2360,7 @@
         "hi": "hi-Deva-IN",
         "hi-Deva": "hi-Deva-IN",
         "hi-IN": "hi-Deva-IN",
+        "hi-Latn": "hi-Latn-IN",
         "hia": "hia-Latn-ZZ",
         "hia-Latn": "hia-Latn-ZZ",
         "hia-ZZ": "hia-Latn-ZZ",
@@ -2410,6 +2417,7 @@
         "hot-ZZ": "hot-Latn-ZZ",
         "hr": "hr-Latn-HR",
         "hr-HR": "hr-Latn-HR",
+        "hr-HU": "hr-Latn-HU",
         "hr-Latn": "hr-Latn-HR",
         "hr-ME": "hr-Latn-ME",
         "hsb": "hsb-Latn-DE",
@@ -2427,6 +2435,9 @@
         "hui": "hui-Latn-ZZ",
         "hui-Latn": "hui-Latn-ZZ",
         "hui-ZZ": "hui-Latn-ZZ",
+        "hur": "hur-Latn-CA",
+        "hur-CA": "hur-Latn-CA",
+        "hur-Latn": "hur-Latn-CA",
         "hy": "hy-Armn-AM",
         "hy-AM": "hy-Armn-AM",
         "hy-Armn": "hy-Armn-AM",
@@ -2495,9 +2506,6 @@
         "ikk": "ikk-Latn-ZZ",
         "ikk-Latn": "ikk-Latn-ZZ",
         "ikk-ZZ": "ikk-Latn-ZZ",
-        "ikt": "ikt-Latn-CA",
-        "ikt-CA": "ikt-Latn-CA",
-        "ikt-Latn": "ikt-Latn-CA",
         "ikw": "ikw-Latn-ZZ",
         "ikw-Latn": "ikw-Latn-ZZ",
         "ikw-ZZ": "ikw-Latn-ZZ",
@@ -2609,6 +2617,7 @@
         "ka-Geok": "ka-Geok-GE",
         "ka-Geor": "ka-Geor-GE",
         "ka-Gong": "ka-Gong-GE",
+        "ka-IR": "ka-Geor-IR",
         "kaa": "kaa-Cyrl-UZ",
         "kaa-Cyrl": "kaa-Cyrl-UZ",
         "kaa-UZ": "kaa-Cyrl-UZ",
@@ -2633,6 +2642,9 @@
         "kao": "kao-Latn-ML",
         "kao-Latn": "kao-Latn-ML",
         "kao-ML": "kao-Latn-ML",
+        "kaw": "kaw-Kawi-ID",
+        "kaw-ID": "kaw-Kawi-ID",
+        "kaw-Kawi": "kaw-Kawi-ID",
         "kbd": "kbd-Cyrl-RU",
         "kbd-Cyrl": "kbd-Cyrl-RU",
         "kbd-RU": "kbd-Cyrl-RU",
@@ -2917,6 +2929,7 @@
         "ktr-MY": "ktr-Latn-MY",
         "ku": "ku-Latn-TR",
         "ku-Arab": "ku-Arab-IQ",
+        "ku-IQ": "ku-Arab-IQ",
         "ku-LB": "ku-Arab-LB",
         "ku-Latn": "ku-Latn-TR",
         "ku-TR": "ku-Latn-TR",
@@ -2963,6 +2976,9 @@
         "kwj": "kwj-Latn-ZZ",
         "kwj-Latn": "kwj-Latn-ZZ",
         "kwj-ZZ": "kwj-Latn-ZZ",
+        "kwk": "kwk-Latn-CA",
+        "kwk-CA": "kwk-Latn-CA",
+        "kwk-Latn": "kwk-Latn-CA",
         "kwo": "kwo-Latn-ZZ",
         "kwo-Latn": "kwo-Latn-ZZ",
         "kwo-ZZ": "kwo-Latn-ZZ",
@@ -3109,6 +3125,9 @@
         "lij": "lij-Latn-IT",
         "lij-IT": "lij-Latn-IT",
         "lij-Latn": "lij-Latn-IT",
+        "lil": "lil-Latn-CA",
+        "lil-CA": "lil-Latn-CA",
+        "lil-Latn": "lil-Latn-CA",
         "lis": "lis-Lisu-CN",
         "lis-CN": "lis-Lisu-CN",
         "lis-Lisu": "lis-Lisu-CN",
@@ -3348,6 +3367,9 @@
         "mi": "mi-Latn-NZ",
         "mi-Latn": "mi-Latn-NZ",
         "mi-NZ": "mi-Latn-NZ",
+        "mic": "mic-Latn-CA",
+        "mic-CA": "mic-Latn-CA",
+        "mic-Latn": "mic-Latn-CA",
         "mif": "mif-Latn-ZZ",
         "mif-Latn": "mif-Latn-ZZ",
         "mif-ZZ": "mif-Latn-ZZ",
@@ -3800,6 +3822,15 @@
         "ogc": "ogc-Latn-ZZ",
         "ogc-Latn": "ogc-Latn-ZZ",
         "ogc-ZZ": "ogc-Latn-ZZ",
+        "oj": "oj-Cans-CA",
+        "oj-CA": "oj-Cans-CA",
+        "oj-Cans": "oj-Cans-CA",
+        "ojs": "ojs-Cans-CA",
+        "ojs-CA": "ojs-Cans-CA",
+        "ojs-Cans": "ojs-Cans-CA",
+        "oka": "oka-Latn-CA",
+        "oka-CA": "oka-Latn-CA",
+        "oka-Latn": "oka-Latn-CA",
         "okr": "okr-Latn-ZZ",
         "okr-Latn": "okr-Latn-ZZ",
         "okr-ZZ": "okr-Latn-ZZ",
@@ -3943,6 +3974,9 @@
         "ppo": "ppo-Latn-ZZ",
         "ppo-Latn": "ppo-Latn-ZZ",
         "ppo-ZZ": "ppo-Latn-ZZ",
+        "pqm": "pqm-Latn-CA",
+        "pqm-CA": "pqm-Latn-CA",
+        "pqm-Latn": "pqm-Latn-CA",
         "pra": "pra-Khar-PK",
         "pra-Khar": "pra-Khar-PK",
         "pra-PK": "pra-Khar-PK",
@@ -3955,6 +3989,7 @@
         "ps": "ps-Arab-AF",
         "ps-AF": "ps-Arab-AF",
         "ps-Arab": "ps-Arab-AF",
+        "ps-PK": "ps-Arab-PK",
         "pss": "pss-Latn-ZZ",
         "pss-Latn": "pss-Latn-ZZ",
         "pss-ZZ": "pss-Latn-ZZ",
@@ -3965,6 +4000,7 @@
         "pt-GQ": "pt-Latn-GQ",
         "pt-GW": "pt-Latn-GW",
         "pt-Latn": "pt-Latn-BR",
+        "pt-MO": "pt-Latn-MO",
         "pt-MZ": "pt-Latn-MZ",
         "pt-PT": "pt-Latn-PT",
         "pt-ST": "pt-Latn-ST",
@@ -4145,12 +4181,10 @@
         "sco": "sco-Latn-GB",
         "sco-GB": "sco-Latn-GB",
         "sco-Latn": "sco-Latn-GB",
-        "scs": "scs-Latn-CA",
-        "scs-CA": "scs-Latn-CA",
-        "scs-Latn": "scs-Latn-CA",
         "sd": "sd-Arab-PK",
         "sd-Arab": "sd-Arab-PK",
         "sd-Deva": "sd-Deva-IN",
+        "sd-IN": "sd-Deva-IN",
         "sd-Khoj": "sd-Khoj-IN",
         "sd-PK": "sd-Arab-PK",
         "sd-Sind": "sd-Sind-IN",
@@ -4785,7 +4819,7 @@
         "und-Arab": "ar-Arab-EG",
         "und-Arab-CC": "ms-Arab-CC",
         "und-Arab-CN": "ug-Arab-CN",
-        "und-Arab-GB": "ks-Arab-GB",
+        "und-Arab-GB": "ur-Arab-GB",
         "und-Arab-ID": "ms-Arab-ID",
         "und-Arab-IN": "ur-Arab-IN",
         "und-Arab-KH": "cja-Arab-KH",
@@ -4855,7 +4889,7 @@
         "und-CY": "el-Grek-CY",
         "und-CZ": "cs-Latn-CZ",
         "und-Cakm": "ccp-Cakm-BD",
-        "und-Cans": "cr-Cans-CA",
+        "und-Cans": "iu-Cans-CA",
         "und-Cari": "xcr-Cari-TR",
         "und-Cham": "cjm-Cham-VN",
         "und-Cher": "chr-Cher-US",
@@ -4867,7 +4901,7 @@
         "und-Cyrl": "ru-Cyrl-RU",
         "und-Cyrl-AL": "mk-Cyrl-AL",
         "und-Cyrl-BA": "sr-Cyrl-BA",
-        "und-Cyrl-GE": "os-Cyrl-GE",
+        "und-Cyrl-GE": "ab-Cyrl-GE",
         "und-Cyrl-GR": "mk-Cyrl-GR",
         "und-Cyrl-MD": "uk-Cyrl-MD",
         "und-Cyrl-RO": "bg-Cyrl-RO",
@@ -4950,9 +4984,8 @@
         "und-Hano": "hnn-Hano-PH",
         "und-Hans": "zh-Hans-CN",
         "und-Hant": "zh-Hant-TW",
+        "und-Hant-CA": "yue-Hant-CA",
         "und-Hebr": "he-Hebr-IL",
-        "und-Hebr-CA": "yi-Hebr-CA",
-        "und-Hebr-GB": "yi-Hebr-GB",
         "und-Hebr-SE": "yi-Hebr-SE",
         "und-Hebr-UA": "yi-Hebr-UA",
         "und-Hebr-US": "yi-Hebr-US",
@@ -4993,6 +5026,7 @@
         "und-KZ": "ru-Cyrl-KZ",
         "und-Kali": "eky-Kali-MM",
         "und-Kana": "ja-Kana-JP",
+        "und-Kawi": "kaw-Kawi-ID",
         "und-Khar": "pra-Khar-PK",
         "und-Khmr": "km-Khmr-KH",
         "und-Khoj": "sd-Khoj-IN",
@@ -5093,6 +5127,7 @@
         "und-NR": "na-Latn-NR",
         "und-NU": "en-Latn-NU",
         "und-NZ": "en-Latn-NZ",
+        "und-Nagm": "unr-Nagm-IN",
         "und-Nand": "sa-Nand-IN",
         "und-Narb": "xna-Narb-SA",
         "und-Nbat": "arc-Nbat-JO",
