Add ko-US locale to localematch.json

--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -2831,6 +2831,7 @@
         "ko-KP": "ko-Kore-KP",
         "ko-KR": "ko-Kore-KR",
         "ko-Kore": "ko-Kore-KR",
+        "ko-US": "ko-Kore-US",
         "koi": "koi-Cyrl-RU",
         "koi-Cyrl": "koi-Cyrl-RU",
         "koi-RU": "koi-Cyrl-RU",
