--- a/js/data/locale/currency.json
+++ b/js/data/locale/currency.json
@@ -560,7 +560,7 @@
         "sign": "K"
     },
     "PHP": {
-        "name": "Philippine Piso",
+        "name": "Philippine Peso",
         "decimals": 2,
         "sign": "₱"
     },
