--- a/js/data/locale/ml/list.json
+++ b/js/data/locale/ml/list.json
@@ -2,27 +2,19 @@
     "or": {
         "full": {
             "2": "{0} അല്ലെങ്കിൽ {1}",
-            "end": "{0}, അല്ലെങ്കിൽ {1}",
-            "middle": "{0}, {1} എന്നിവ",
-            "start": "{0}, {1} എന്നിവ"
+            "end": "{0}, അല്ലെങ്കിൽ {1}"
         },
         "long": {
             "2": "{0} അല്ലെങ്കിൽ {1}",
-            "end": "{0}, അല്ലെങ്കിൽ {1}",
-            "middle": "{0}, {1} എന്നിവ",
-            "start": "{0}, {1} എന്നിവ"
+            "end": "{0}, അല്ലെങ്കിൽ {1}"
         },
         "medium": {
             "2": "{0} അല്ലെങ്കിൽ {1}",
-            "end": "{0}, അല്ലെങ്കിൽ {1}",
-            "middle": "{0}, {1} എന്നിവ",
-            "start": "{0}, {1} എന്നിവ"
+            "end": "{0}, അല്ലെങ്കിൽ {1}"
         },
         "short": {
             "2": "{0} അല്ലെങ്കിൽ {1}",
-            "end": "{0}, അല്ലെങ്കിൽ {1}",
-            "middle": "{0}, {1} എന്നിവ",
-            "start": "{0}, {1} എന്നിവ"
+            "end": "{0}, അല്ലെങ്കിൽ {1}"
         }
     },
     "standard": {
