--- a/js/data/locale/brx/sysres.json
+++ b/js/data/locale/brx/sysres.json
@@ -75,54 +75,54 @@
     "EE0": "रबि",
     "EE1": "सम",
     "EE2": "मंगल",
-    "EE3": "बुद",
-    "EE4": "बिसथि",
+    "EE3": "बुध",
+    "EE4": "बिस्थि",
     "EE5": "सुखुर",
     "EE6": "सुनि",
     "EEE0": "रबि",
     "EEE1": "सम",
     "EEE2": "मंगल",
-    "EEE3": "बुद",
-    "EEE4": "बिसथि",
+    "EEE3": "बुध",
+    "EEE4": "बिस्थि",
     "EEE5": "सुखुर",
     "EEE6": "सुनि",
     "EEEE0": "रबिबार",
     "EEEE1": "समबार",
     "EEEE2": "मंगलबार",
-    "EEEE3": "बुदबार",
-    "EEEE4": "बिसथिबार",
+    "EEEE3": "बुधबार",
+    "EEEE4": "बिस्थिबार",
     "EEEE5": "सुखुरबार",
     "EEEE6": "सुनिबार",
-    "G-1": "ईसा.पूर्व",
-    "G1": "सन",
-    "MMM1": "जानुवारी",
-    "MMM10": "अखथबर",
-    "MMM11": "नबेज्ब़र",
-    "MMM12": "दिसेज्ब़र",
-    "MMM2": "फेब्रुवारी",
-    "MMM3": "मार्स",
-    "MMM4": "एफ्रिल",
+    "G-1": "बिसिइ",
+    "G1": "सि.इ.",
+    "MMM1": "जान",
+    "MMM10": "अक्ट’",
+    "MMM11": "नवे",
+    "MMM12": "डिसे",
+    "MMM2": "फेब",
+    "MMM3": "मार्च",
+    "MMM4": "एप्रि",
     "MMM5": "मे",
     "MMM6": "जुन",
-    "MMM7": "जुलाइ",
-    "MMM8": "आगस्थ",
-    "MMM9": "सेबथेज्ब़र",
+    "MMM7": "जुल",
+    "MMM8": "आग",
+    "MMM9": "सेप",
     "MMMM1": "जानुवारी",
-    "MMMM10": "अखथबर",
-    "MMMM11": "नबेज्ब़र",
-    "MMMM12": "दिसेज्ब़र",
-    "MMMM2": "फेब्रुवारी",
-    "MMMM3": "मार्स",
-    "MMMM4": "एफ्रिल",
+    "MMMM10": "अक्ट’बर",
+    "MMMM11": "नवेम्बर",
+    "MMMM12": "डिसेम्बर",
+    "MMMM2": "फेब्रूवारी",
+    "MMMM3": "मार्च",
+    "MMMM4": "एप्रिल",
     "MMMM5": "मे",
     "MMMM6": "जुन",
-    "MMMM7": "जुलाइ",
-    "MMMM8": "आगस्थ",
-    "MMMM9": "सेबथेज्ब़र",
+    "MMMM7": "जुलाई",
+    "MMMM8": "आगष्ट",
+    "MMMM9": "सेप्थेम्बर",
     "N1": "ज",
     "N10": "अ",
     "N11": "न",
-    "N12": "द",
+    "N12": "ड",
     "N2": "फ",
     "N3": "म",
     "N4": "ए",
@@ -132,12 +132,12 @@
     "N8": "आ",
     "N9": "स",
     "NN1": "जा",
-    "NN10": "अख",
-    "NN11": "नब",
-    "NN12": "दि",
+    "NN10": "अक",
+    "NN11": "नव",
+    "NN12": "डि",
     "NN2": "फे",
     "NN3": "मा",
-    "NN4": "एफ",
+    "NN4": "एप",
     "NN5": "मे",
     "NN6": "जु",
     "NN7": "जु",
@@ -153,10 +153,10 @@
     "durationShortMillis": "#{num} ms",
     "durationShortMinutes": "#{num} min",
     "durationShortMonths": "#{num} m",
-    "finalSeparatorFull": ", ",
-    "finalSeparatorLong": ", ",
-    "finalSeparatorMedium": ", ",
-    "finalSeparatorShort": ", ",
+    "finalSeparatorFull": ", आरो ",
+    "finalSeparatorLong": ", आरो ",
+    "finalSeparatorMedium": ", आरो ",
+    "finalSeparatorShort": ", आरो ",
     "separatorMedium": ", ",
     "separatorShort": ", "
 }
