--- a/js/data/locale/ks/Arab/sysres.json
+++ b/js/data/locale/ks/Arab/sysres.json
@@ -60,7 +60,7 @@
     "LL2": "فر",
     "LL3": "ما",
     "LL4": "اپ",
-    "LL5": "می",
+    "LL5": "مئ",
     "LL6": "جو",
     "LL7": "جو",
     "LL8": "اگ",
@@ -72,7 +72,7 @@
     "LLL2": "فرؤری",
     "LLL3": "مارٕچ",
     "LLL4": "اپریل",
-    "LLL5": "میٔ",
+    "LLL5": "مئی",
     "LLL6": "جوٗن",
     "LLL7": "جوٗلایی",
     "LLL8": "اگست",
@@ -84,7 +84,7 @@
     "LLLL2": "فرؤری",
     "LLLL3": "مارٕچ",
     "LLLL4": "اپریل",
-    "LLLL5": "میٔ",
+    "LLLL5": "مئی",
     "LLLL6": "جوٗن",
     "LLLL7": "جوٗلایی",
     "LLLL8": "اگست",
