--- a/js/data/locale/ks/sysres.json
+++ b/js/data/locale/ks/sysres.json
@@ -93,8 +93,8 @@
     "EEEE4": "برؠسوار",
     "EEEE5": "جُمہ",
     "EEEE6": "بٹوار",
-    "G-1": "بی سی",
-    "G1": "اے ڈی",
+    "G-1": "بی سی ای",
+    "G1": "سی ای",
     "MMM1": "جنؤری",
     "MMM10": "اکتوٗبر",
     "MMM11": "نومبر",
@@ -102,7 +102,7 @@
     "MMM2": "فرؤری",
     "MMM3": "مارٕچ",
     "MMM4": "اپریل",
-    "MMM5": "میٔ",
+    "MMM5": "مئی",
     "MMM6": "جوٗن",
     "MMM7": "جوٗلایی",
     "MMM8": "اگست",
@@ -114,7 +114,7 @@
     "MMMM2": "فرؤری",
     "MMMM3": "مارٕچ",
     "MMMM4": "اپریل",
-    "MMMM5": "میٔ",
+    "MMMM5": "مئی",
     "MMMM6": "جوٗن",
     "MMMM7": "جوٗلایی",
     "MMMM8": "اگست",
@@ -138,7 +138,7 @@
     "NN2": "فر",
     "NN3": "ما",
     "NN4": "اپ",
-    "NN5": "می",
+    "NN5": "مئ",
     "NN6": "جو",
     "NN7": "جو",
     "NN8": "اگ",
@@ -151,10 +151,12 @@
     "durationShortMillis": "#{num} ms",
     "durationShortMinutes": "#{num} min",
     "durationShortMonths": "#{num} m",
-    "finalSeparatorFull": ", ",
-    "finalSeparatorLong": ", ",
-    "finalSeparatorMedium": ", ",
-    "finalSeparatorShort": ", ",
-    "separatorMedium": ", ",
-    "separatorShort": ", "
+    "finalSeparatorFull": "، تٕہ ",
+    "finalSeparatorLong": "، تٕہ ",
+    "finalSeparatorMedium": "، تٕہ ",
+    "finalSeparatorShort": "، تٕہ ",
+    "separatorFull": "، ",
+    "separatorLong": "، ",
+    "separatorMedium": "، ",
+    "separatorShort": "، "
 }
