--- a/js/data/locale/kn/sysres.json
+++ b/js/data/locale/kn/sysres.json
@@ -20,17 +20,17 @@
     "#{num}y": "one#{num}ವ|#{num}ವ",
     "#{num}y ago": "one#{num} ವರ್ಷದ ಹಿಂದೆ|#{num} ವರ್ಷಗಳ ಹಿಂದೆ",
     "1#1 day ago|#{num} days ago": "one#{num} ದಿನದ ಹಿಂದೆ|#{num} ದಿನಗಳ ಹಿಂದೆ",
-    "1#1 day|#{num} days": "one#{num} ದಿನ|#{num} ದಿನಗಳು",
+    "1#1 day|#{num} days": "one#{num} ದಿನವು|#{num} ದಿನಗಳು",
     "1#1 dy ago|#{num} dys ago": "one#{num} ದಿನದ ಹಿಂದೆ|#{num} ದಿನಗಳ ಹಿಂದೆ",
     "1#1 dy|#{num} dys": "one#{num}ದಿ|#{num}ದಿ",
     "1#1 hour ago|#{num} hours ago": "one#{num} ಗಂಟೆ ಹಿಂದೆ|#{num} ಗಂಟೆಗಳ ಹಿಂದೆ",
-    "1#1 hour|#{num} hours": "one#{num} ಗಂಟೆ|#{num} ಗಂಟೆಗಳು",
+    "1#1 hour|#{num} hours": "one#{num} ಗಂಟೆಯು|#{num} ಗಂಟೆಗಳು",
     "1#1 hr ago|#{num} hrs ago": "one#{num} ಗಂಟೆ ಹಿಂದೆ|#{num} ಗಂಟೆಗಳ ಹಿಂದೆ",
     "1#1 hr|#{num} hrs": "one#{num} ಗಂ.|#{num} ಗಂ.",
     "1#1 millisecond|#{num} milliseconds": "one#{num} ಮಿಲಿಸೆಕೆಂಡ್|#{num} ಮಿಲಿಸೆಕೆಂಡುಗಳು",
     "1#1 min ago|#{num} min ago": "one#{num} ನಿಮಿಷದ ಹಿಂದೆ|#{num} ನಿಮಿಷಗಳ ಹಿಂದೆ",
     "1#1 minute ago|#{num} minutes ago": "one#{num} ನಿಮಿಷದ ಹಿಂದೆ|#{num} ನಿಮಿಷಗಳ ಹಿಂದೆ",
-    "1#1 minute|#{num} minutes": "one#{num} ನಿಮಿಷ|#{num} ನಿಮಿಷಗಳು",
+    "1#1 minute|#{num} minutes": "one#{num} ನಿಮಿಷವು|#{num} ನಿಮಿಷಗಳು",
     "1#1 min|#{num} min": "one#{num} ನಿಮಿ|#{num} ನಿಮಿ",
     "1#1 mi|#{num} min": "one#{num}ನಿಮಿ|#{num}ನಿಮಿ",
     "1#1 mon ago|#{num} mons ago": "one#{num} ತಿಂಗಳ ಹಿಂದೆ|#{num} ತಿಂಗಳುಗಳ ಹಿಂದೆ",
@@ -44,11 +44,11 @@
     "1#1 sec|#{num} sec": "one#{num} ಸೆಕೆಂ|#{num} ಸೆಕೆಂ",
     "1#1 se|#{num} sec": "one#{num}ಸೆಕೆಂ|#{num} ಸೆಕೆಂ",
     "1#1 week ago|#{num} weeks ago": "one#{num} ವಾರದ ಹಿಂದೆ|#{num} ವಾರಗಳ ಹಿಂದೆ",
-    "1#1 week|#{num} weeks": "one#{num} ವಾರ|#{num} ವಾರಗಳು",
+    "1#1 week|#{num} weeks": "one#{num} ವಾರವು|#{num} ವಾರಗಳು",
     "1#1 wk ago|#{num} wks ago": "one#{num} ವಾರದ ಹಿಂದೆ|#{num} ವಾರಗಳ ಹಿಂದೆ",
     "1#1 wk|#{num} wks": "one#{num} ವಾರ|#{num} ವಾರಗಳು",
     "1#1 year ago|#{num} years ago": "one#{num} ವರ್ಷದ ಹಿಂದೆ|#{num} ವರ್ಷಗಳ ಹಿಂದೆ",
-    "1#1 year|#{num} years": "one#{num} ವರ್ಷ|#{num} ವರ್ಷಗಳು",
+    "1#1 year|#{num} years": "one#{num} ವರ್ಷವು|#{num} ವರ್ಷಗಳು",
     "1#1 yr ago|#{num} yrs ago": "one#{num} ವರ್ಷದ ಹಿಂದೆ|#{num} ವರ್ಷಗಳ ಹಿಂದೆ",
     "1#1 yr|#{num} yrs": "one#{num} ವರ್ಷ|#{num} ವರ್ಷಗಳು",
     "1#in 1 day|#in {num} days": "one#{num} ದಿನದಲ್ಲಿ|#{num} ದಿನಗಳಲ್ಲಿ",
