--- a/js/data/locale/ur/IN/sysres.json
+++ b/js/data/locale/ur/IN/sysres.json
@@ -19,10 +19,5 @@
     "1#in 1 week|#in {num} weeks": "one#‏{num} ہفتہ میں|#‏{num} ہفتوں میں",
     "1#in 1 wk|#in {num} wks": "one#‏{num} ہفتہ میں|#‏{num} ہفتوں میں",
     "1#in 1 year|#in {num} years": "one#‏{num} سال میں|#‏{num} سالوں میں",
-    "1#in 1 yr|#in {num} yrs": "one#‏{num} سال میں|#‏{num} سالوں میں",
-    "finalSeparatorFull": "، ",
-    "finalSeparatorLong": "، ",
-    "finalSeparatorMedium": "، ",
-    "finalSeparatorShort": " ",
-    "separatorShort": " "
+    "1#in 1 yr|#in {num} yrs": "one#‏{num} سال میں|#‏{num} سالوں میں"
 }
