Update to time zone data 2022f

--- a/js/data/locale/zoneinfo/Europe/Belgrade.json
+++ b/js/data/locale/zoneinfo/Europe/Belgrade.json
@@ -6,7 +6,7 @@
         "t": "3:0"
     },
     "f": "CE{c}T",
-    "n": "Central Europe {c} Time",
+    "n": "Central European {c} Time",
     "o": "1:0",
     "s": {
         "c": "S",
