--- a/js/data/locale/zoneinfo/America/Ojinaga.json
+++ b/js/data/locale/zoneinfo/America/Ojinaga.json
@@ -1,19 +1,6 @@
 {
     "c": "MX",
-    "e": {
-        "c": "S",
-        "m": 11,
-        "r": "0>1",
-        "t": "2:0"
-    },
-    "f": "M{c}T",
+    "f": "CST",
     "n": "Mountain {c} Time",
-    "o": "-7:0",
-    "s": {
-        "c": "D",
-        "m": 3,
-        "r": "0>8",
-        "t": "2:0",
-        "v": "1:0"
-    }
+    "o": "-6:0"
 }
