--- a/js/data/locale/zoneinfo/Europe/Paris.json
+++ b/js/data/locale/zoneinfo/Europe/Paris.json
@@ -6,7 +6,7 @@
         "t": "3:0"
     },
     "f": "CE{c}T",
-    "n": "Romance {c} Time",
+    "n": "W. Europe {c} Time",
     "o": "1:0",
     "s": {
         "c": "S",
