--- a/js/data/locale/rangeToScript.json
+++ b/js/data/locale/rangeToScript.json
@@ -886,7 +886,7 @@
     [
         "Knda",
         3313,
-        3314
+        3315
     ],
     [
         "Mlym",
@@ -1034,7 +1034,7 @@
     [
         "Laoo",
         3784,
-        3789
+        3790
     ],
     [
         "Laoo",
@@ -3128,6 +3128,11 @@
         69297
     ],
     [
+        "Arab",
+        69373,
+        69375
+    ],
+    [
         "Sogo",
         69376,
         69415
@@ -3218,7 +3223,7 @@
     [
         "Khoj",
         70163,
-        70206
+        70209
     ],
     [
         "Mult",
@@ -3490,6 +3495,11 @@
         72440
     ],
     [
+        "Deva",
+        72448,
+        72457
+    ],
+    [
         "Bhks",
         72704,
         72712
@@ -3594,6 +3604,21 @@
         73464
     ],
     [
+        "Kawi",
+        73472,
+        73488
+    ],
+    [
+        "Kawi",
+        73490,
+        73530
+    ],
+    [
+        "Kawi",
+        73534,
+        73561
+    ],
+    [
         "Lisu",
         73648
     ],
@@ -3634,12 +3659,7 @@
     [
         "Egyp",
         77824,
-        78894
-    ],
-    [
-        "Egyp",
-        78896,
-        78904
+        78933
     ],
     [
         "Hluw",
@@ -3804,8 +3824,16 @@
     ],
     [
         "Hira",
+        110898
+    ],
+    [
+        "Hira",
         110928,
         110930
+    ],
+    [
+        "Kana",
+        110933
     ],
     [
         "Kana",
@@ -3921,6 +3949,11 @@
         "Grek",
         119296,
         119365
+    ],
+    [
+        "Zyyy",
+        119488,
+        119507
     ],
     [
         "Zyyy",
@@ -4060,6 +4093,11 @@
         122654
     ],
     [
+        "Latn",
+        122661,
+        122666
+    ],
+    [
         "Glag",
         122880,
         122886
@@ -4083,6 +4121,15 @@
         "Glag",
         122918,
         122922
+    ],
+    [
+        "Cyrl",
+        122928,
+        122989
+    ],
+    [
+        "Cyrl",
+        123023
     ],
     [
         "Hmnp",
@@ -4117,6 +4164,11 @@
     [
         "Wcho",
         123647
+    ],
+    [
+        "Nagm",
+        124112,
+        124153
     ],
     [
         "Ethi",
@@ -4403,7 +4455,7 @@
     ],
     [
         "Zyyy",
-        128733,
+        128732,
         128748
     ],
     [
@@ -4414,12 +4466,12 @@
     [
         "Zyyy",
         128768,
-        128883
+        128886
     ],
     [
         "Zyyy",
-        128896,
-        128984
+        128891,
+        128985
     ],
     [
         "Zyyy",
@@ -4473,47 +4525,37 @@
     [
         "Zyyy",
         129648,
-        129652
-    ],
-    [
-        "Zyyy",
-        129656,
         129660
     ],
     [
         "Zyyy",
         129664,
-        129670
+        129672
     ],
     [
         "Zyyy",
         129680,
-        129708
+        129725
     ],
     [
         "Zyyy",
-        129712,
-        129722
-    ],
-    [
-        "Zyyy",
-        129728,
+        129727,
         129733
     ],
     [
         "Zyyy",
-        129744,
-        129753
+        129742,
+        129755
     ],
     [
         "Zyyy",
         129760,
-        129767
+        129768
     ],
     [
         "Zyyy",
         129776,
-        129782
+        129784
     ],
     [
         "Zyyy",
@@ -4538,7 +4580,7 @@
     [
         "Hani",
         173824,
-        177976
+        177977
     ],
     [
         "Hani",
@@ -4564,6 +4606,11 @@
         "Hani",
         196608,
         201546
+    ],
+    [
+        "Hani",
+        201552,
+        205743
     ],
     [
         "Zyyy",
