--- a/js/data/locale/scriptToRange.json
+++ b/js/data/locale/scriptToRange.json
@@ -129,6 +129,10 @@
             69246
         ],
         [
+            69373,
+            69375
+        ],
+        [
             126464,
             126467
         ],
@@ -591,6 +595,13 @@
         [
             65070,
             65071
+        ],
+        [
+            122928,
+            122989
+        ],
+        [
+            123023
         ]
     ],
     "Deva": [
@@ -609,6 +620,10 @@
         [
             43232,
             43263
+        ],
+        [
+            72448,
+            72457
         ]
     ],
     "Diak": [
@@ -681,11 +696,7 @@
     "Egyp": [
         [
             77824,
-            78894
-        ],
-        [
-            78896,
-            78904
+            78933
         ]
     ],
     "Elba": [
@@ -1399,7 +1410,7 @@
         ],
         [
             173824,
-            177976
+            177977
         ],
         [
             177984,
@@ -1420,6 +1431,10 @@
         [
             196608,
             201546
+        ],
+        [
+            201552,
+            205743
         ]
     ],
     "Hano": [
@@ -1491,6 +1506,9 @@
         [
             110593,
             110879
+        ],
+        [
+            110898
         ],
         [
             110928,
@@ -1642,8 +1660,25 @@
             110882
         ],
         [
+            110933
+        ],
+        [
             110948,
             110951
+        ]
+    ],
+    "Kawi": [
+        [
+            73472,
+            73488
+        ],
+        [
+            73490,
+            73530
+        ],
+        [
+            73534,
+            73561
         ]
     ],
     "Khar": [
@@ -1705,7 +1740,7 @@
         ],
         [
             70163,
-            70206
+            70209
         ]
     ],
     "Kits": [
@@ -1768,7 +1803,7 @@
         ],
         [
             3313,
-            3314
+            3315
         ]
     ],
     "Kthi": [
@@ -1834,7 +1869,7 @@
         ],
         [
             3784,
-            3789
+            3790
         ],
         [
             3792,
@@ -1990,6 +2025,10 @@
         [
             122624,
             122654
+        ],
+        [
+            122661,
+            122666
         ]
     ],
     "Lepc": [
@@ -2302,6 +2341,12 @@
         [
             43616,
             43647
+        ]
+    ],
+    "Nagm": [
+        [
+            124112,
+            124153
         ]
     ],
     "Nand": [
@@ -3692,6 +3737,10 @@
             119274
         ],
         [
+            119488,
+            119507
+        ],
+        [
             119520,
             119539
         ],
@@ -3849,7 +3898,7 @@
             128727
         ],
         [
-            128733,
+            128732,
             128748
         ],
         [
@@ -3858,11 +3907,11 @@
         ],
         [
             128768,
-            128883
+            128886
         ],
         [
-            128896,
-            128984
+            128891,
+            128985
         ],
         [
             128992,
@@ -3905,39 +3954,31 @@
         ],
         [
             129648,
-            129652
-        ],
-        [
-            129656,
             129660
         ],
         [
             129664,
-            129670
+            129672
         ],
         [
             129680,
-            129708
+            129725
         ],
         [
-            129712,
-            129722
-        ],
-        [
-            129728,
+            129727,
             129733
         ],
         [
-            129744,
-            129753
+            129742,
+            129755
         ],
         [
             129760,
-            129767
+            129768
         ],
         [
             129776,
-            129782
+            129784
         ],
         [
             129792,
