Update to tz data 2022g

--- a/js/data/locale/zoneinfo/zonetab.json
+++ b/js/data/locale/zoneinfo/zonetab.json
@@ -642,6 +642,7 @@
         "America/Bahia_Banderas",
         "America/Cancun",
         "America/Chihuahua",
+        "America/Ciudad_Juarez",
         "America/Ensenada",
         "America/Hermosillo",
         "America/Matamoros",
