--- a/js/data/locale/localematch.json
+++ b/js/data/locale/localematch.json
@@ -886,6 +886,9 @@
         "ajg": "ajg-Latn-ZZ",
         "ajg-Latn": "ajg-Latn-ZZ",
         "ajg-ZZ": "ajg-Latn-ZZ",
+        "ajt": "ajt-Arab-TN",
+        "ajt-Arab": "ajt-Arab-TN",
+        "ajt-TN": "ajt-Arab-TN",
         "ak": "ak-Latn-GH",
         "ak-GH": "ak-Latn-GH",
         "ak-Latn": "ak-Latn-GH",
@@ -928,9 +931,9 @@
         "ank": "ank-Latn-ZZ",
         "ank-Latn": "ank-Latn-ZZ",
         "ank-ZZ": "ank-Latn-ZZ",
-        "ann": "ann-Latn-ZZ",
-        "ann-Latn": "ann-Latn-ZZ",
-        "ann-ZZ": "ann-Latn-ZZ",
+        "ann": "ann-Latn-NG",
+        "ann-Latn": "ann-Latn-NG",
+        "ann-NG": "ann-Latn-NG",
         "any": "any-Latn-ZZ",
         "any-Latn": "any-Latn-ZZ",
         "any-ZZ": "any-Latn-ZZ",
@@ -3818,6 +3821,7 @@
         "nzi-GH": "nzi-Latn-GH",
         "nzi-Latn": "nzi-Latn-GH",
         "oc": "oc-Latn-FR",
+        "oc-ES": "oc-Latn-ES",
         "oc-FR": "oc-Latn-FR",
         "oc-Latn": "oc-Latn-FR",
         "ogc": "ogc-Latn-ZZ",
@@ -3942,6 +3946,9 @@
         "pip": "pip-Latn-ZZ",
         "pip-Latn": "pip-Latn-ZZ",
         "pip-ZZ": "pip-Latn-ZZ",
+        "pis": "pis-Latn-SB",
+        "pis-Latn": "pis-Latn-SB",
+        "pis-SB": "pis-Latn-SB",
         "pka": "pka-Brah-IN",
         "pka-Brah": "pka-Brah-IN",
         "pka-IN": "pka-Brah-IN",
@@ -4290,6 +4297,9 @@
         "sma": "sma-Latn-SE",
         "sma-Latn": "sma-Latn-SE",
         "sma-SE": "sma-Latn-SE",
+        "smd": "smd-Latn-AO",
+        "smd-AO": "smd-Latn-AO",
+        "smd-Latn": "smd-Latn-AO",
         "smj": "smj-Latn-SE",
         "smj-Latn": "smj-Latn-SE",
         "smj-SE": "smj-Latn-SE",
@@ -4308,6 +4318,9 @@
         "sn": "sn-Latn-ZW",
         "sn-Latn": "sn-Latn-ZW",
         "sn-ZW": "sn-Latn-ZW",
+        "snb": "snb-Latn-MY",
+        "snb-Latn": "snb-Latn-MY",
+        "snb-MY": "snb-Latn-MY",
         "snc": "snc-Latn-ZZ",
         "snc-Latn": "snc-Latn-ZZ",
         "snc-ZZ": "snc-Latn-ZZ",
@@ -4626,6 +4639,9 @@
         "tog": "tog-Latn-MW",
         "tog-Latn": "tog-Latn-MW",
         "tog-MW": "tog-Latn-MW",
+        "tok": "tok-Latn-001",
+        "tok-001": "tok-Latn-001",
+        "tok-Latn": "tok-Latn-001",
         "toq": "toq-Latn-ZZ",
         "toq-Latn": "toq-Latn-ZZ",
         "toq-ZZ": "toq-Latn-ZZ",
